jsp页面不起作用....

--- a/spring-boot-shiro-dal/pom.xml
+++ b/spring-boot-shiro-dal/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>spring-boot-shiro-dal</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
