--- a/spring-boot-shiro-web/pom.xml
+++ b/spring-boot-shiro-web/pom.xml
@@ -8,8 +8,14 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring-boot-shiro-web</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.wung</groupId>
+            <artifactId>spring-boot-shiro-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
