--- a/spring-boot-shiro-web/src/main/resources/application.properties
+++ b/spring-boot-shiro-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #thymeleaf start
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
