--- a/spring-boot-shiro-web/src/main/resources/application.properties
+++ b/spring-boot-shiro-web/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.thymeleaf.cache=false
 #static 文件夹下的静态文件访问路径
 spring.mvc.static-path-pattern=/**
 #thymeleaf end
+
+# ActiveMq
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.in-memory=true
+spring.activemq.pool.enabled=false
+spring.activemq.packages.trust-all=true
