--- a/spring-boot-shiro-web/src/main/resources/application.properties
+++ b/spring-boot-shiro-web/src/main/resources/application.properties
@@ -9,7 +9,16 @@ spring.mvc.static-path-pattern=/**
 #thymeleaf end
 
 # ActiveMq
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.in-memory=true
-spring.activemq.pool.enabled=false
-spring.activemq.packages.trust-all=true
+#spring.activemq.broker-url=tcp://localhost:61616
+#spring.activemq.in-memory=true
+#spring.activemq.pool.enabled=false
+#spring.activemq.packages.trust-all=true
+
+
+# actuator 监控信息
+management.server.port=8081
+# 只允许本地查看
+management.server.address=localhost
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+
