--- a/spring-boot-shiro-service/pom.xml
+++ b/spring-boot-shiro-service/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>spring-boot-shiro</artifactId>
         <groupId>com.wung</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-shiro-service</artifactId>
+    <name>spring-boot-shiro-service</name>
+    <version>0.0.2-SNAPSHOT</version>
 
 
     <dependencies>
