--- a/spring-boot-shiro-webapp/pom.xml
+++ b/spring-boot-shiro-webapp/pom.xml
@@ -5,17 +5,23 @@
     <parent>
         <artifactId>spring-boot-shiro</artifactId>
         <groupId>com.wung</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-boot-shiro-web</artifactId>
+    <artifactId>spring-boot-shiro-webapp</artifactId>
+    <name>spring-boot-shiro-webapp</name>
+    <packaging>jar</packaging>
 
+    <properties>
+        <!--<maven.compiler.source>1.8</maven.compiler.source>-->
+        <!--<maven.compiler.target>1.8</maven.compiler.target>-->
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.wung</groupId>
             <artifactId>spring-boot-shiro-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
