json 驼峰转下划线

--- a/spring-boot-shiro-service/pom.xml
+++ b/spring-boot-shiro-service/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>spring-boot-shiro-dal</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
     </dependencies>
 
 </project>
